PROJECT(MCPP)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

INCLUDE_DIRECTORIES(inc)

set(DIR_PROJECT "${CMAKE_CURRENT_SOURCE_DIR}/")
file(GLOB_RECURSE DIR_SRC
    "./*.c"
    "./*.h"
    "./*.H"
)

ADD_LIBRARY(MCPP STATIC ${DIR_SRC})
add_definitions(-DMCPP_LIB)
SET_TARGET_PROPERTIES(MCPP PROPERTIES POSITION_INDEPENDENT_CODE TRUE)
SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR})